# card_ofc

./: .gitignore  CLAUDE.md  pyproject.toml
card_ofc_flutter/: pubspec.yaml
card_ofc_flutter/lib/: main.dart
card_ofc_flutter/lib/logic/: deck.dart  fantasyland.dart  game_controller.dart  royalty.dart  (+2 more)
card_ofc_flutter/test/: widget_test.dart
cli/: main.py
docs/00-prd/: alpha.prd.md  layer0-ofc.prd.md  standard.prd.md  webgui.prd.md
docs/01-plan/: alpha.plan.md  card-autochess.prd.md  layer0-ofc.plan.md  mvp.plan.md  poc.plan.md  shop-droprate.plan.md  standard.plan.md  webgui.plan.md
docs/02-design/: alpha.design.md  layer0-ofc.design.md  poc.design.md  standard.design.md  webgui.design.md
docs/04-report/: alpha.report.md  layer0-ofc.report.md  poc-verification.report.md  poc.report.md  webgui.report.md
docs/mockups/: ofc-board.html
godot/: project.godot  test_debug.gd  test_logic.gd
godot/scenes/: Board.tscn  CardNode.tscn  GameScene.tscn  HUD.tscn  Main.tscn  Shop.tscn
godot/scripts/: BoardView.gd  Card.gd  CardNode.gd  Combat.gd  Economy.gd  GameController.gd  GameUI.gd  HUD.gd  HandEvaluator.gd  MainMenu.gd  Pool.gd  ShopView.gd  SimpleAI.gd
src/: augment.py  board.py  card.py  combat.py  economy.py  game.py  hand.py  holdem.py  pool.py
tests/: test_augment.py  test_board.py  test_card.py  test_combat.py  test_economy.py  test_game.py  test_hand.py  test_holdem.py  test_level_up.py  test_pineapple.py  test_serializer.py  test_suit_synergy.py  test_web_api.py
web/: app.py  serializer.py
web/static/: game.js  index.html  style.css
(+50 files in other folders)
